--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
         "@angular/platform-browser": "^15.0.0",
         "@angular/platform-browser-dynamic": "^15.0.0",
         "@angular/router": "^15.0.0",
+        "bootstrap": "^5.3.5",
+        "bootstrap-icons": "^1.11.3",
+        "ng2-currency-mask": "^13.0.3",
+        "ngx-mask": "^15.2.3",
         "rxjs": "~7.5.0",
         "tslib": "^2.3.0",
+        "uuid": "^11.1.0",
         "zone.js": "~0.12.0"
     },
     "devDependencies": {
