--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/router": "^15.0.0",
         "@ng-bootstrap/ng-bootstrap": "^14.2.0",
         "@popperjs/core": "^2.11.6",
+        "animate.css": "^4.1.1",
         "bootstrap": "^5.3.5",
         "bootstrap-icons": "^1.11.3",
         "ng2-currency-mask": "^13.0.3",
